tests/snapshots/input__form-fresh.snap
---
source: tests/input.rs
expression: "testing::snapshot(12, paint)"
---
== dark-truecolor · 40x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off


---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..3 fg=Hint bg=Selected reversed
r1 c3..21 fg=Hint bg=Selected
r1 c21..40 bg=Selected
r2 c0..7 fg=Foreground bg=Background
r2 c7..40 bg=Background
r3 c0..2 bg=Surface
r3 c2..3 fg=Hint bg=Surface
r3 c3..40 bg=Surface
r4 c0..2 bg=Background
r4 c2..26 fg=Muted bg=Background
r4 c26..40 bg=Background
r5 c0..8 fg=Muted bg=Background dim
r5 c8..40 bg=Background
r6 c0..2 bg=Background
r6 c2..16 fg=Muted bg=Background dim
r6 c16..40 bg=Background
r7 c0..1 fg=Muted bg=Background
r7 c1..2 bg=Background
r7 c2..11 fg=Muted bg=Background
r7 c11..40 bg=Background
r8 c0..9 fg=Foreground bg=Background
r8 c9..40 bg=Background
r9 c0..2 bg=Surface
r9 c2..7 fg=Muted bg=Surface
r9 c7..40 bg=Surface
r10 c0..40 bg=Background
r11 c0..40 bg=Background

== dark-truecolor · 80x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off


---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..80 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..3 fg=Hint bg=Selected reversed
r1 c3..21 fg=Hint bg=Selected
r1 c21..80 bg=Selected
r2 c0..7 fg=Foreground bg=Background
r2 c7..80 bg=Background
r3 c0..2 bg=Surface
r3 c2..3 fg=Hint bg=Surface
r3 c3..80 bg=Surface
r4 c0..2 bg=Background
r4 c2..26 fg=Muted bg=Background
r4 c26..80 bg=Background
r5 c0..8 fg=Muted bg=Background dim
r5 c8..80 bg=Background
r6 c0..2 bg=Background
r6 c2..16 fg=Muted bg=Background dim
r6 c16..80 bg=Background
r7 c0..1 fg=Muted bg=Background
r7 c1..2 bg=Background
r7 c2..11 fg=Muted bg=Background
r7 c11..80 bg=Background
r8 c0..9 fg=Foreground bg=Background
r8 c9..80 bg=Background
r9 c0..2 bg=Surface
r9 c2..7 fg=Muted bg=Surface
r9 c7..80 bg=Surface
r10 c0..80 bg=Background
r11 c0..80 bg=Background

== dark-truecolor · 120x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off


---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..120 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..3 fg=Hint bg=Selected reversed
r1 c3..21 fg=Hint bg=Selected
r1 c21..120 bg=Selected
r2 c0..7 fg=Foreground bg=Background
r2 c7..120 bg=Background
r3 c0..2 bg=Surface
r3 c2..3 fg=Hint bg=Surface
r3 c3..120 bg=Surface
r4 c0..2 bg=Background
r4 c2..26 fg=Muted bg=Background
r4 c26..120 bg=Background
r5 c0..8 fg=Muted bg=Background dim
r5 c8..120 bg=Background
r6 c0..2 bg=Background
r6 c2..16 fg=Muted bg=Background dim
r6 c16..120 bg=Background
r7 c0..1 fg=Muted bg=Background
r7 c1..2 bg=Background
r7 c2..11 fg=Muted bg=Background
r7 c11..120 bg=Background
r8 c0..9 fg=Foreground bg=Background
r8 c9..120 bg=Background
r9 c0..2 bg=Surface
r9 c2..7 fg=Muted bg=Surface
r9 c7..120 bg=Surface
r10 c0..120 bg=Background
r11 c0..120 bg=Background

== no-color · 40x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off



== no-color · 80x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off



== no-color · 120x12
Name
› e.g. nightly-report
API key
  —
  Stored in your keychain.
Schedule
  every day at 7
· Read only
Notify me
  ○ Off



== ascii · 40x12
Name
> e.g. nightly-report
API key
  -
  Stored in your keychain.
Schedule
  every day at 7
. Read only
Notify me
  [ ] Off



== ascii · 80x12
Name
> e.g. nightly-report
API key
  -
  Stored in your keychain.
Schedule
  every day at 7
. Read only
Notify me
  [ ] Off



== ascii · 120x12
Name
> e.g. nightly-report
API key
  -
  Stored in your keychain.
Schedule
  every day at 7
. Read only
Notify me
  [ ] Off
