tests/snapshots/input__form-scrolled.snap
---
source: tests/input.rs
expression: "testing::snapshot(5, paint)"
---
== dark-truecolor · 40x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off
---
r0 c0..8 fg=Muted bg=Background dim
r0 c8..40 bg=Background
r1 c0..2 bg=Background
r1 c2..16 fg=Muted bg=Background dim
r1 c16..40 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..11 fg=Muted bg=Background
r2 c11..40 bg=Background
r3 c0..9 fg=Foreground bg=Background bold
r3 c9..40 bg=Background
r4 c0..1 fg=Primary bg=Selected
r4 c1..2 bg=Selected
r4 c2..7 fg=Muted bg=Selected bold
r4 c7..40 bg=Selected

== dark-truecolor · 80x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off
---
r0 c0..8 fg=Muted bg=Background dim
r0 c8..80 bg=Background
r1 c0..2 bg=Background
r1 c2..16 fg=Muted bg=Background dim
r1 c16..80 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..11 fg=Muted bg=Background
r2 c11..80 bg=Background
r3 c0..9 fg=Foreground bg=Background bold
r3 c9..80 bg=Background
r4 c0..1 fg=Primary bg=Selected
r4 c1..2 bg=Selected
r4 c2..7 fg=Muted bg=Selected bold
r4 c7..80 bg=Selected

== dark-truecolor · 120x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off
---
r0 c0..8 fg=Muted bg=Background dim
r0 c8..120 bg=Background
r1 c0..2 bg=Background
r1 c2..16 fg=Muted bg=Background dim
r1 c16..120 bg=Background
r2 c0..1 fg=Muted bg=Background
r2 c1..2 bg=Background
r2 c2..11 fg=Muted bg=Background
r2 c11..120 bg=Background
r3 c0..9 fg=Foreground bg=Background bold
r3 c9..120 bg=Background
r4 c0..1 fg=Primary bg=Selected
r4 c1..2 bg=Selected
r4 c2..7 fg=Muted bg=Selected bold
r4 c7..120 bg=Selected

== no-color · 40x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off

== no-color · 80x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off

== no-color · 120x5
Schedule
  every day at 7
· Read only
Notify me
› ○ Off

== ascii · 40x5
Schedule
  every day at 7
. Read only
Notify me
> [ ] Off

== ascii · 80x5
Schedule
  every day at 7
. Read only
Notify me
> [ ] Off

== ascii · 120x5
Schedule
  every day at 7
. Read only
Notify me
> [ ] Off
