tests/snapshots/input__text-input-secret.snap
---
source: tests/input.rs
expression: "testing :: snapshot(height, draw)"
---
== dark-truecolor · 40x2
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..40 bg=Selected

== dark-truecolor · 80x2
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..80 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..80 bg=Selected

== dark-truecolor · 120x2
API key
› •••••••••••••••
---
r0 c0..7 fg=Foreground bg=Background bold
r0 c7..120 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..17 fg=Foreground bg=Selected
r1 c17..18 bg=Selected reversed
r1 c18..120 bg=Selected

== no-color · 40x2
API key
› •••••••••••••••

== no-color · 80x2
API key
› •••••••••••••••

== no-color · 120x2
API key
› •••••••••••••••

== ascii · 40x2
API key
> ***************

== ascii · 80x2
API key
> ***************

== ascii · 120x2
API key
> ***************
