tests/snapshots/input__text-input-typed.snap
---
source: tests/input.rs
expression: "testing :: snapshot(height, draw)"
---
== dark-truecolor · 40x2
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..40 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..40 bg=Selected

== dark-truecolor · 80x2
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..80 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..80 bg=Selected

== dark-truecolor · 120x2
Name
› nightly-report
---
r0 c0..4 fg=Foreground bg=Background bold
r0 c4..120 bg=Background
r1 c0..1 fg=Primary bg=Selected
r1 c1..2 bg=Selected
r1 c2..16 fg=Foreground bg=Selected
r1 c16..17 bg=Selected reversed
r1 c17..120 bg=Selected

== no-color · 40x2
Name
› nightly-report

== no-color · 80x2
Name
› nightly-report

== no-color · 120x2
Name
› nightly-report

== ascii · 40x2
Name
> nightly-report

== ascii · 80x2
Name
> nightly-report

== ascii · 120x2
Name
> nightly-report
